# arm_aim

./: CMakeLists.txt
camera/: CMakeLists.txt
camera/include/: Camera.hpp
camera/src/: Camera.cpp
commun/: CMakeLists.txt
commun/include/: MessageManager.hpp  SerialPort.hpp
commun/src/: MessageManager.cpp  SerialPort.cpp
config/: AimautoConfig.yaml  CameraConfig.yaml  DetectionConfig.yaml  WindmillConfig.yaml
param/: CMakeLists.txt
param/include/: GlobalParam.hpp
param/src/: GlobalParam.cpp
tools/: CMakeLists.txt
tools/include/: UIManager.hpp
tools/src/: UIManager.cpp
